--- a/build-aux/makefile-libbindle.am
+++ b/build-aux/makefile-libbindle.am
@@ -64,6 +64,8 @@ EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/makefile-libbindle.am \
 					   $(lib_libbindle_a_SOURCES)
 CLEANFILES				+= lib/libbindle.a
 BINDLE_TESTS_DEPS			=
+BINDLE_LIBBINDLE_SOURCES		=
+BINDLE_LIBBINDLE_DEPS			=
 
 
 # conditional build
@@ -141,8 +143,10 @@ lib_libbindle_a_SOURCES			= $(srcdir)/$(bindletools_srcdir)/include/bindle.h \
 					  $(srcdir)/$(bindletools_srcdir)/lib/libbindle/lutf8.c \
 					  $(srcdir)/$(bindletools_srcdir)/lib/libbindle/lutf8.h
 if ENABLE_BUILTIN_BINDLE
-   BINDLE_LIBBINDLE_SOURCES		=  include/bindle_prefix.h \
-					   $(lib_libbindle_a_SOURCES)
+   lib_libbindle_a_DEPENDENCIES		+= include/bindle_prefix.h
+   lib_libbindle_a_SOURCES		+= include/bindle_prefix.h
+   BINDLE_LIBBINDLE_DEPS		+= include/bindle_prefix.h
+   BINDLE_LIBBINDLE_SOURCES		+= $(lib_libbindle_a_SOURCES)
 endif
 
 
