--- a/build-aux/makefile-libbindle.am
+++ b/build-aux/makefile-libbindle.am
@@ -62,7 +62,8 @@ EXTRA_DIST				+= $(bindletools_srcdir)/build-aux/makefile-libbindle.am \
 					   $(bindletools_srcdir)/include/bindle.h \
 					   $(bindletools_srcdir)/lib/libbindle/libbindle.sym \
 					   $(lib_libbindle_a_SOURCES)
-CLEANFILES				+= lib/libbindle.a
+CLEANFILES				+= lib/libbindle.a \
+					   include/bindle_prefix.h
 BINDLE_TESTS_DEPS			=
 BINDLE_LIBBINDLE_SOURCES		=
 BINDLE_LIBBINDLE_DEPS			=
@@ -144,7 +145,6 @@ lib_libbindle_a_SOURCES			= $(srcdir)/$(bindletools_srcdir)/include/bindle.h \
 					  $(srcdir)/$(bindletools_srcdir)/lib/libbindle/lutf8.h
 if ENABLE_BUILTIN_BINDLE
    lib_libbindle_a_DEPENDENCIES		+= include/bindle_prefix.h
-   lib_libbindle_a_SOURCES		+= include/bindle_prefix.h
    BINDLE_LIBBINDLE_DEPS		+= include/bindle_prefix.h
    BINDLE_LIBBINDLE_SOURCES		+= $(lib_libbindle_a_SOURCES)
 endif
