bindletools: adding urlencoding widget

--- a/Makefile.am
+++ b/Makefile.am
@@ -133,7 +133,8 @@ src_bindletools_DEPENDENCIES		= lib/libbindle.la
 src_bindletools_LDADD			= lib/libbindle.la
 src_bindletools_SOURCES			= src/bindletools.c \
 					  src/bindletools.h \
-					  src/widget-urldesc.c
+					  src/widget-urldesc.c \
+					  src/widget-urlencoding.c
 
 
 # Makefile includes
