bindletools: adding initial encoding widgets

--- a/Makefile.am
+++ b/Makefile.am
@@ -133,6 +133,7 @@ src_bindletools_DEPENDENCIES		= lib/libbindle.la
 src_bindletools_LDADD			= lib/libbindle.la
 src_bindletools_SOURCES			= src/bindletools.c \
 					  src/bindletools.h \
+					  src/widget-encodings.c \
 					  src/widget-urldesc.c \
 					  src/widget-urlencoding.c
 
