doc: adding man page for bindle_strchomp.3

--- a/Makefile.am
+++ b/Makefile.am
@@ -74,7 +74,8 @@ doc_DATA				= AUTHORS.md \
 include_HEADERS				=
 lib_LTLIBRARIES				=
 lib_LIBRARIES				=
-man_MANS				=
+man_MANS				= doc/mans/bindle_strchomp.3 \
+					  doc/mans/bindle_strings.3
 info_TEXINFOS				=
 noinst_DATA				=
 noinst_LTLIBRARIES			=
@@ -97,6 +98,8 @@ XFAIL_TESTS				=
 EXTRA_MANS				=
 EXTRA_DIST				= $(doc_DATA) \
 					  autogen.sh \
+					  doc/mans/bindle_strchomp.3.in \
+					  doc/mans/bindle_strings.3.in \
 					  tests/bindletools/README.md \
 					  m4/bindle-doxygen.m4 \
 					  m4/bindle-fd-poller.m4 \
@@ -156,10 +159,20 @@ git-clean:
 	git gc --auto --aggressive
 
 
+doc/mans/bindle_strchomp.3: Makefile $(srcdir)/doc/mans/bindle_strchomp.3.in
+	@$(do_subst_dt)
+
+doc/mans/bindle_strings.3: Makefile $(srcdir)/doc/mans/bindle_strings.3.in
+	@$(do_subst_dt)
+
 # local targets
 install-exec-local:
 
-install-data-local:
+install-data-local: install-man
+	if test -f $(DESTDIR)/$(mandir)/man3/bindle_strchomp.3;then\
+           cd $(DESTDIR)/$(mandir)/man3 && \
+           ln -fs bindle_strchomp.3 bindle_strchop.3; \
+	fi;
 
 uninstall-local:
 
