doc: adding man page for bindletools.1

--- a/Makefile.am
+++ b/Makefile.am
@@ -74,7 +74,8 @@ doc_DATA				= AUTHORS.md \
 include_HEADERS				=
 lib_LTLIBRARIES				=
 lib_LIBRARIES				=
-man_MANS				= doc/mans/bindle_strchomp.3 \
+man_MANS				= doc/mans/bindletools.1 \
+					  doc/mans/bindle_strchomp.3 \
 					  doc/mans/bindle_strings.3 \
 					  doc/mans/bindle_strlcpy.3
 info_TEXINFOS				=
@@ -99,6 +100,7 @@ XFAIL_TESTS				=
 EXTRA_MANS				=
 EXTRA_DIST				= $(doc_DATA) \
 					  autogen.sh \
+					  doc/mans/bindletools.1.in \
 					  doc/mans/bindle_strchomp.3.in \
 					  doc/mans/bindle_strings.3.in \
 					  doc/mans/bindle_strlcpy.3.in \
@@ -160,6 +162,9 @@ git-clean:
 	git fsck --full --unreachable
 	git gc --auto --aggressive
 
+
+doc/mans/bindletools.1: Makefile $(srcdir)/doc/mans/bindletools.1.in
+	@$(do_subst_dt)
 
 doc/mans/bindle_strchomp.3: Makefile $(srcdir)/doc/mans/bindle_strchomp.3.in
 	@$(do_subst_dt)
