doc: adding man page for bindle_array.3

--- a/Makefile.am
+++ b/Makefile.am
@@ -75,6 +75,7 @@ include_HEADERS				=
 lib_LTLIBRARIES				=
 lib_LIBRARIES				=
 man_MANS				= doc/mans/bindletools.1 \
+					  doc/mans/bindle_array.3 \
 					  doc/mans/bindle_strchomp.3 \
 					  doc/mans/bindle_strdup.3 \
 					  doc/mans/bindle_strings.3 \
@@ -102,6 +103,7 @@ EXTRA_MANS				=
 EXTRA_DIST				= $(doc_DATA) \
 					  autogen.sh \
 					  doc/mans/bindletools.1.in \
+					  doc/mans/bindle_array.3.in \
 					  doc/mans/bindle_strchomp.3.in \
 					  doc/mans/bindle_strdup.3.in \
 					  doc/mans/bindle_strings.3.in \
@@ -166,6 +168,9 @@ git-clean:
 
 
 doc/mans/bindletools.1: Makefile $(srcdir)/doc/mans/bindletools.1.in
+	@$(do_subst_dt)
+
+doc/mans/bindle_array.3: Makefile $(srcdir)/doc/mans/bindle_array.3.in
 	@$(do_subst_dt)
 
 doc/mans/bindle_strchomp.3: Makefile $(srcdir)/doc/mans/bindle_strchomp.3.in
